@@ -1,4 +1,6 @@
 [theme]
 docclass = book
 wrapperclass = sphinxbook
+papersize = a4paper
+pointsize = 12pt
 toplevel_sectioning = chapter
